# fitstream

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  changelog.md  context7.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  reference.md  requirements.txt  tutorial.md
src/fitstream/: __init__.py  augmentations.py  batching.py  events.py  fit.py  sinks.py
tests/: test_augment.py  test_batching.py  test_early_stop.py  test_ema.py  test_epoch_stream.py  test_pipe.py  test_print_keys.py  test_sinks.py  test_take.py  test_tap.py  test_tick.py
