[project]
name = "fitstream"
version = "0.1.0"
description = "A library to train PyTorch models as a stream of events"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
]
license = { text = "Apache 2.0" }
authors = [
    { name = "Alex Shtoff", email = "alex.shtf@gmail.com" }
]
keywords = ["pytorch", "dataloader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.1.0",
    "pyright>=1.1.351",
    "pre-commit>=3.0.0",
    "numpy>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/alexshtf/fitstream"
Repository = "https://github.com/alexshtf/fitstream"
Issues = "https://github.com/alexshtf/fitstream/issues"

[tool.ruff]
line-length = 120
target-version = "py312"
